# tkapp

./: LICENSE  README.md  pyproject.toml  tkapp.conf  tkapp.py
assets/: dashboard.py
